# LouvainOptimization

./: .gitignore  README.md
refactor_grappolo/: CMakeLists.txt
refactor_grappolo/converter/: CMakeLists.txt  convertFileToBinary.cpp  convertFileToEdgeList.cpp  convertSnapFileToBinary.cpp
refactor_louvain/: CMakeLists.txt  ReadMe.md  community.h  graph_binary.h  main_community.cpp  main_convert.cpp  main_hierarchy.cpp
refactor_louvain/doc/: readme.txt
refactor_louvain/playground/: main_random.cpp
